html et css modification

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <h1>WELCOME TO THE WILD LOTTERY</h1>
     <div class="conteneur-grid">
         <div>1</div>
         <div>2</div>
