--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
     <h1>WELCOME TO THE WILD LOTTERY</h1>
     <div class="container-grid">
-        <div class="ccase-class">
-            <h2 class="ccaseNumber-class">1</h2>
-        </div> 
+        <!-- <div class="ccase-class">
+            <h2 class="ccaseNumber-class"></h2>
+        </div> -->
+    </div>
+    <div class="tableauGains">   
     </div>
     <h2>Résultat du tirage</h2>
     <div id="resultat"></div>
