--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
 </head>
 <body>
     <h1>WELCOME TO THE WILD LOTTERY</h1>
+    <h2>Règle du jeu</h2>
+    <p>bla bla blabla bla blabla bla bla</p>
+    <p>bla bla blabla bla blabla bla bla</p>
+    <p>bla bla blabla bla blabla bla bla</p>
     <div class="container-grid">
         <!-- <div class="ccase-class">
             <h2 class="ccaseNumber-class"></h2>
@@ -18,6 +22,11 @@
     </div>
     <h2>Résultat du tirage</h2>
     <div id="resultat"></div>
+    <div id="test"></div>
+    <div class="button">
+    <input type="button" value="J'ai plus de 18ans" />
+    <input type="button" value="J'ai moins de 18ans" />
+    </div>
     <script src="loterie.js"></script>  
 </body>
 </html>
