html css and js modifications

--- a/index.html
+++ b/index.html
@@ -8,25 +8,20 @@
     <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-    <h1>WELCOME TO THE WILD LOTTERY</h1>
-    <h2>Règle du jeu</h2>
-    <p>bla bla blabla bla blabla bla bla</p>
-    <p>bla bla blabla bla blabla bla bla</p>
-    <p>bla bla blabla bla blabla bla bla</p>
-    <div class="container-grid">
-        <!-- <div class="ccase-class">
-            <h2 class="ccaseNumber-class"></h2>
-        </div> -->
+    <h1>BIENVENUE A LA LOTERIE DE LA WILD CODE SCHOOL</h1>
+    <div id="avertissement">
+        Ce site de jeux d'argent est réservé à un public majeur.
+        L'accès est strictement interdit aux mineurs. 
     </div>
-    <div class="tableauGains">   
+    <div id="button">
+        <input type="button" class="button" id="over18" value="J'ai plus de 18ans Je joue" />
+        <input type="button" class="button" id="under18" value="J'ai moins de 18ans Je quitte le site" />
     </div>
-    <h2>Résultat du tirage</h2>
-    <div id="resultat"></div>
-    <div id="test"></div>
-    <div class="button">
-    <input type="button" value="J'ai plus de 18ans" />
-    <input type="button" value="J'ai moins de 18ans" />
-    </div>
-    <script src="loterie.js"></script>  
-</body>
+    <script src="acces.js"></script>  
+    </body>
+<footer>
+    <img src="pictures/18ans.png" height=25px/>
+<p>JOUER COMPORTE DES RISQUES : ENDETTEMENT, ISOLEMENT, DÉPENDANCE.
+    POUR ÊTRE AIDÉ, APPELEZ LE 09-74-75-13-13 (APPEL NON SURTAXÉ)</p>
+</footer>
 </html>
