html, css modifications

--- a/game.html
+++ b/game.html
@@ -9,10 +9,26 @@
 </head>
 <body>
     <h1>BIENVENUE A LA LOTERIE DE LA WILD CODE SCHOOL</h1>
-    <h2>Règle du jeu</h2>
-    <p>bla bla blabla bla blabla bla bla</p>
-    <p>bla bla blabla bla blabla bla bla</p>
-    <p>bla bla blabla bla blabla bla bla</p>
+    <div id="section">
+      <div id="section1">
+        <h2>Règle du jeu</h2>
+        <p>Pour jouer à notre loterie, vous devez choisir 5 numéros sur une grille de 25 numéros.</p>
+        <p>Si vous ne savez pas quels numéros jouer, vous avez la possibilité d'utiliser notre système flash qui choisira pour vous 5 numéros de façon aléatoire.</p>
+        <p>Une fois vos numéros sélectionnés et validés, vous lancez le tirage.</p>
+        <p>Si vous avez 1 ou plusieurs numéros correspondants aux numéros sortis, vous remportez le gain associé comme indiqué dans le tableau des gains.</p>
+        <p>Les gains sont proportionnels à la mise de départ.</p>
+      </div>
+        <div>
+          <div id="section2">
+          <p>Votre argent:</p>
+          </div>
+          <br>
+          <div id="section3">
+          <p>Votre mise:</p>
+          </div>
+         </div> 
+    </div>
+    <br>
     <div class="tableaux">
         <div class="container-grid">
         <!-- <div class="ccase-class">
