html and css modifications

--- a/game.html
+++ b/game.html
@@ -20,11 +20,13 @@
       </div>
         <div>
           <div id="section2">
-          <p>Votre argent:</p>
+            <p>Votre argent:</p>
+            <img src="pictures/euro.png" height=50px/>
           </div>
           <br>
           <div id="section3">
-          <p>Votre mise:</p>
+            <p>Votre mise:</p>
+            <img src="pictures/euro.png" height=50px/>
           </div>
          </div> 
     </div>
@@ -67,12 +69,12 @@
                     </tr>
                     <tr>
                       <td>2</td>
-                      <td>3 fois la mise</td>
+                      <td>5 fois la mise</td>
                       <td></td>
                     </tr>
                     <tr>
                       <td>3</td>
-                      <td>10 fois la mise</td>
+                      <td>20 fois la mise</td>
                       <td></td>
                     </tr>
                     <tr>
